2006-07-18  Marcus Crestani  <crestani@xemacs.org>

	* alloc.c: Fix typo in string_direct_data_description.

2006-07-07  Jerry James  <james@xemacs.org>

	* sound.c (init_native_sound): Make the target of a strcpy be
	exactly the right size to hold the copied string.

2006-07-08  Aidan Kehoe  <kehoea@parhasard.net>

	* lisp.h:
	* redisplay.c (add_octal_runes):
	* syntax.h:
	* text.c
	Change some comments to reflect a 21-bit character space. 
	* text.c (non_ascii_valid_ichar_p):
	Check that no character value is greater than 2^^21, not
	2^^19. This fixes the Mule build when error-checking is turned on.

2006-07-08  Aidan Kehoe  <kehoea@parhasard.net>

	* symbols.c (Fsubr_name):
	Use the CHECK_SUBR macro instead of the GNU code's explicit if
	statement.

2006-07-08  Aidan Kehoe  <kehoea@parhasard.net>

	* charset.h:
	Move to 7 bits instead of 5 for the first field of a character.

2006-07-07  Aidan Kehoe  <kehoea@parhasard.net>

	* config.h.in:
	Don't declare inline macros as `extern' if we're building a
	standalone program, because their extern definitions in inline.c
	are unlikely to be included.

2006-06-24  Stephen J. Turnbull  <stephen@xemacs.org>

	* gc.c (gc_mark_root_set): Quiet GCC 4 whining about unused values.

2006-06-29  Jerry James  <james@xemacs.org>

	* scrollbar-gtk.c (gtk_free_scrollbar_instance): Compare
	instance->scrollbar_data against NULL before using it.
	* scrollbar-msw.c (mswindows_free_scrollbar_instance): Compare
	sb->scrollbar_data against NULL before using it.

2006-06-22  Jerry James  <james@xemacs.org>

	* redisplay-gtk.c (gtk_output_display_block): Fix a Dynarr leak.
	Don't create the buffer if there is nothing to do.
	* redisplay-msw.c (mswindows_output_display_block): Ditto.
	* redisplay-output.c (redisplay_output_layout): Ditto.
	* redisplay-tty.c (tty_output_display_block): Ditto.
	* redisplay-x.c (x_output_display_block): Ditto.

2006-06-23  Stephen J. Turnbull  <stephen@xemacs.org>

	* font-mgr.c (extract_fcapi_string):