@@ -1,5 +1,10 @@
 2006-07-18  Marcus Crestani  <crestani@xemacs.org>
 
+	* gc.c (kkcc_backtrace): Print adresses as pointers.
+	* vdb-posix.c (vdb_fault_handler): Print adresses as pointers.
+
+2006-07-18  Marcus Crestani  <crestani@xemacs.org>
+
 	* alloc.c: Fix typo in string_direct_data_description.
 
 2006-07-07  Jerry James  <james@xemacs.org>
